# axum-template

./: .gitignore  AGENTS.md  Cargo.toml  README.md  manage  manage.sh
apps/backend/: Cargo.toml
apps/backend/src/: config.rs  error.rs  ext.rs  lib.rs
apps/backend/src/app/: error.rs  init.rs  mod.rs  response.rs  router.rs  serve.rs  state.rs
apps/backend/src/app/controller/: auth.rs  chore.rs  user.rs
apps/backend/src/app/dto/: extractor.rs  mod.rs
apps/backend/src/app/dto/request/: auth.rs  chore.rs  common.rs  mod.rs  pagination.rs  user.rs
apps/backend/src/app/dto/response/: auth.rs  chore.rs  hello.rs  mod.rs  user.rs
apps/backend/src/app/helper/: auth.rs  constants.rs  extractor.rs  mod.rs
apps/backend/src/app/jsonrpc/: error.rs  mod.rs
apps/backend/src/app/middleware/: auth.rs  cors.rs
apps/backend/src/app/route/: auth.rs  chore.rs  mod.rs  user.rs
apps/backend/src/cli/: command.rs  command_impl.rs  mod.rs  run.rs
apps/backend/src/config/: app.rs  schema.rs
apps/backend/src/domain/: facade.rs  initdata.rs  mod.rs
apps/backend/src/domain/db/: connection.rs  mod.rs
apps/backend/src/domain/model/: mod.rs  permission.rs  role.rs  user.rs  user_principal.rs
apps/backend/src/domain/repository/: mod.rs  permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
apps/backend/src/domain/service/: auth.rs  mod.rs  permission.rs  role.rs  user.rs
apps/backend/src/error/: app.rs  mod.rs
apps/backend/src/infra/logging/: mod.rs
apps/backend/src/util/: password.rs
apps/backend/tests/: integration_test.rs
config/: default.toml
crates/axum-template/: Cargo.toml
crates/axum-template/src/app/: error.rs  mod.rs  router.rs  serve.rs
crates/axum-template/src/app/controller/: chore.rs  jwt_demo.rs  ws.rs
crates/axum-template/src/app/dto/request/: common.rs  pagination.rs
crates/axum-template/src/app/dto/response/: user.rs
crates/axum-template/src/app/extractor/: mod.rs
crates/axum-template/src/app/extractor/auth/: jwt.rs  session.rs
crates/axum-template/src/app/handler/: auth.rs  jwt_demo.rs  mod.rs  user.rs
crates/axum-template/src/app/helper/: extractor.rs
crates/axum-template/src/app/helper/auth/: session.rs
crates/axum-template/src/cli/: command.rs  run.rs
crates/axum-template/src/config/: meta.rs  mod.rs  schema.rs
crates/axum-template/src/domain/: mod.rs
crates/axum-template/src/domain/db/: connection.rs  mod.rs  types.rs
crates/axum-template/src/domain/model/: mod.rs  refresh_token.rs  role.rs
crates/axum-template/src/domain/service/: auth.rs  mod.rs  role.rs  session.rs  token.rs  user.rs
crates/axum-template/src/infra/logging/: mod.rs
crates/axum-template/tests/: integration_test.rs
crates/backend/: Cargo.toml
crates/backend/src/: dirs.rs  error.rs  lib.rs  main.rs
crates/backend/src/app/: mod.rs  router.rs  serve.rs  state.rs
crates/backend/src/app/controller/: auth.rs  user.rs
crates/backend/src/app/dto/request/: auth.rs  chore.rs  mod.rs
crates/backend/src/app/dto/response/: auth.rs
crates/backend/src/app/helper/: auth.rs  mod.rs
crates/backend/src/app/helper/auth/: jwt.rs  mod.rs  session.rs
crates/backend/src/cli/: command.rs  command_impl.rs  run.rs
crates/backend/src/config/: env.rs  manager.rs  mod.rs  paths.rs  schema.rs
crates/backend/src/domain/: mod.rs
crates/backend/src/domain/db/: connection.rs
crates/backend/src/domain/model/: mod.rs  permission.rs  role.rs  role_permission.rs  session.rs  user.rs  user_role.rs
crates/backend/src/domain/service/: auth.rs  mod.rs  permission.rs  role.rs  token.rs  user.rs
crates/backend/src/infra/logging/: mod.rs
crates/backend/src/util/: password.rs
crates/backend/tests/: integration_test.rs
crates/entity/: Cargo.toml
crates/entity/src/entity/: mod.rs  permission.rs  prelude.rs  role.rs  role_permission.rs  user.rs  user_role.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  util.rs
docs/: architecture.md
toasty/: history.toml
toasty/migrations/: 0000_initial.sql  0000_migration.sql
toasty/snapshots/: 0000_snapshot.toml
