[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.dependencies]
# 本地 Crate
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }

# 通用/基础库
anyhow = "1"
async-trait = "0.1"
bon = "3"
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde", "now"] }
time = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
arc-swap = "1.8"

# Web & API
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-login = "0.18"
axum-valid = { version = "0.24", features = ["validator", "into_json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-sessions = "0.14"
tower-sessions-seaorm-store = { version = "0.1", features = [
    "sqlite",
    "postgres",
] }

# Database
sea-orm = { version = "1", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
    "with-chrono",
    "with-uuid",
] }
jsonrpsee = { version = "0.26", features = [
    "tokio",
    "macros",
    "server",
    "ws-client",
] }

# Auth & Crypto
argon2 = "0.5"
password-hash = "0.5"

# Logging & CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

# Documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Migration specific
async-std = { version = "1", features = ["attributes", "tokio1"] }
