[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
# 通用/基础库
anyhow = "1"
async-trait = "0.1"
bon = "3"
config = { version = "0.15", features = ["toml"] }
dotenvy = "0.15"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_with = "3.17"
serde_json = "1"
strum = { version = "0.28", features = ["derive"] }
struct-patch = "0.12"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
arc-swap = "1.8"
jiff = { version = "0.2", features = ["serde"] }

# Web & API
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
axum-valid = { version = "0.24", features = ["validator", "into_json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
jsonwebtoken = "9"
rust-embed = { version = "8.5", features = ["axum"] }
mime_guess = "2.0"

# Database
toasty = { version = "0.5", features = ["jiff", "postgresql"] }
toasty-cli = "0.5"

# Auth & Crypto
argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core", "getrandom"] }

# Logging & CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }

# Documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
