[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { workspace = true }
migration = { workspace = true }

anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-login = { workspace = true }
axum-valid = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-seaorm-store = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
