[package]
name = "axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-valid = { workspace = true }
jsonwebtoken = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
bon = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
inquire = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
derive_more = { workspace = true }

jiff = { workspace = true }
toasty = { workspace = true }
toasty-cli = { workspace = true }
